--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "test": "node test.js",
+    "lint": "eslint .; exit 0",
+    "lint:fix": "eslint . --fix; exit 0"
+  },
   "dependencies": {
     "@slack/web-api": "^5.14.0",
     "dateformat": "^4.4.0",
     "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
